# reversi-gui

./: .gitignore  CMakeLists.txt  Doxygen  LICENSE  README.md  REQUIREMENTS.md  TASKS.md  main.cpp  reversi_game.cpp  reversi_game.h  trans.pro
images/: images.qrc
languages/: languages.qrc  test_de.qm  test_de.ts  test_en.ts
sounds/: ATTRIBUTION.md  sounds.qrc
src/: clickablelabel.cpp  clickablelabel.h  connect.h  direction.h  fixed_ratio_widget.h  highscore_columns.h  highscore_dialog.cpp  highscore_dialog.h  interface_reversi_player.h  main.cpp  mainwindow.cpp  mainwindow.h  piece.h  playername_dialog.cpp  playername_dialog.h  random_reversi_player.cpp  random_reversi_player.h  reversi_game.cpp  reversi_game.h  reversi_player_thread.cpp  reversi_player_thread.h  square.h  utils.h
test/: direction_test.cpp  reversi_test.cpp
